--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -2806,7 +2806,7 @@ fieldset:disabled a.btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem;
+  border-radius: 0.2rem;
 }
 
 .btn-sm, .btn-group-sm > .btn {
@@ -2817,7 +2817,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-block {
-  display: block;
+  display: inline;
   width: 100%;
 }
 
