--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -510,6 +510,8 @@ mark,
   color: #858796;
 }
 
+
+
 code {
   font-size: 87.5%;
   color: #e83e8c;
@@ -2967,8 +2969,16 @@ input[type="button"].btn-block {
   bottom: 100%;
   margin-top: 0;
   margin-bottom: 0.125rem;
+  height: auto;
+  max-height: 200px;
+  overflow-x: hidden;
 }
 
+ .scrollable-menu{
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
 .dropup .dropdown-toggle::after {
   display: inline-block;
   margin-left: 0.255em;
