--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 
 h1 {
     text-align: center;
-    font-family: 'Oswald', sans-serif;
+    text-decoration-color: black;
+    font-family:  sans-serif;
     font-size: 60px;
     margin: 50px 0 0;
     color: #000;
@@ -25,7 +26,7 @@ h1 {
 
 .acc h3 {
     font-size: 25px;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,255,0.6);
     color: #fff;
     padding: 15px;
     margin: 0;
